tdf#60874 Set custom HID for Protect Document window

The window has its own help page but the SfxPasswordDialog
has a default help page as well. We need to use custom help IDs here.

The Password entry already has a custom HID however it is used on
the default help page of SfxPasswordDialog.

We need to set a custom help ID for the Confirm entry and
use it in the scalc/01/06060200.xhp file like the one belonging
to the Password entry.

Change-Id: I9344c85cf362a1829202664315f8c8be0a265b59
Reviewed-on: https://gerrit.libreoffice.org/34501
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>